--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentOne">
+    tools:context=".view.fragments.FragmentOne">
 
     <TextView
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         android:id="@+id/id_fragment_1_tv"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.kvk.testappforvk.view.CustomWatchView
+    <com.kvk.testappforvk.view.customview.CustomWatchView
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
         app:layout_constraintTop_toBottomOf="@id/id_fragment_1_tv"
