--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentTwo">
+    tools:context=".view.fragments.FragmentTwo">
 
     <TextView
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHeight_percent="0.3"/>
 
-    <com.kvk.testappforvk.view.CustomWatchView
+    <com.kvk.testappforvk.view.customview.CustomWatchView
         android:layout_width="0dp"
         android:layout_centerInParent="true"
         app:layout_constraintWidth_percent="0.7"
