--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,12 @@
         app:itemTextColor="#ffffff"
         android:layout_height="60dp"/>
 
-    <FrameLayout
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph = "@navigation/nav_host"
+        app:defaultNavHost = "true"
         android:id="@+id/fragment_container"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>
